# cutai

./: .gitignore  CONTRIBUTING.md  DEMO_VIDEO_PLAN.md  HN_SHOW_POST.md  LANDING_PAGE_PLAN.md  PRD.md  PRD_v2.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
awesome-editstyles/: README.md
awesome-editstyles/presets/: cinematic.md  cooking-show.md  music-video.md  podcast-clip.md  shorts-reels.md  tech-review.md  vlog-casual.md
cutai/: __init__.py  chat.py  cli.py  config.py  desktop_backend.py  highlight.py  hwaccel.py  learning.py  mcp_server.py  multi.py  preview.py  server.py
cutai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cutai/agent/: __init__.py  engine.py
cutai/analyzer/: __init__.py  cache.py  engagement.py  quality_analyzer.py  scene_detector.py  transcriber.py
cutai/editor/: __init__.py  bgm.py  color.py  cutter.py  renderer.py  speed.py  subtitle.py  transition.py
cutai/models/: __init__.py  types.py
cutai/planner/: __init__.py  edit_planner.py
cutai/planner/prompts/: system.md
cutai/style/: __init__.py  applier.py  editstyle_converter.py  editstyle_parser.py  extractor.py  io.py  learner.py
cutai/style/presets/: cinematic.yaml  vlog-casual.yaml
desktop/: .gitignore  QA_CHECKLIST.md  README.md  RELEASE_CLOSEOUT_CHECKLIST.md  RELEASE_MACOS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
desktop/scripts/: build-desktop-backend.sh  notarize-macos-release.sh  release-artifact-paths.sh  release-macos-build.sh  verify-macos-release.sh
desktop/src/: App.tsx  AppMainContent.test.tsx  api.test.ts  api.ts  index.css  previewResolutionStorage.test.ts  previewResolutionStorage.ts  recentOutputHistoryStorage.test.ts  recentOutputHistoryStorage.ts  renderPresetStorage.test.ts  renderPresetStorage.ts  renderQuality.test.ts  renderQuality.ts  store.test.ts  store.ts  subtitleExportModeStorage.test.ts  subtitleExportModeStorage.ts  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src/components/: BackendGate.tsx  CanvasPanel.tsx  ChatPanel.tsx  DesktopPlanningBridge.test.tsx  DropZone.tsx  EditPlanPanel.test.tsx  EditPlanPanel.tsx  ExportSuccessNotice.tsx  HighlightsPanel.tsx  InstructionBar.test.tsx  InstructionBar.tsx  JobProgress.preview.test.tsx  JobProgress.test.tsx  JobProgress.tsx  SceneTimeline.tsx  Sidebar.tsx  StylePanel.test.tsx  StylePanel.tsx  VideoPreview.test.tsx  VideoPreview.tsx
docs/: EDITSTYLE_SPEC.md
examples/: README.md
tests/: conftest.py  test_agent.py  test_cli.py  test_editstyle_parser.py  test_highlight.py  test_learning.py  test_multi.py  test_performance.py  test_planner.py  test_renderer.py  test_server_plan.py  test_server_preview.py  test_server_render.py  test_style.py  test_types.py
